<resources>
    <string name="app_name">Lisu</string>


    <!-- screen title -->
    <string name="label_library">Library</string>
    <string name="label_history">History</string>
    <string name="label_explore">Explore</string>
    <string name="label_more">More</string>
    <string name="label_settings_general">General</string>
    <string name="label_settings_reader">Reader</string>
    <string name="label_settings_advanced">Advanced</string>
    <string name="label_about">About</string>
    <string name="label_open_source_license">Open source license</string>
    <string name="label_gallery_edit">Edit</string>
    <string name="label_download">Download</string>


    <!-- library screen -->
    <string name="library_n_selected">%1$d selected</string>
    <string name="library_remove_n_mangas_from_library">Remove %1$d mangas from library?</string>

    <!-- history screen -->
    <string name="history_today">Today</string>
    <string name="history_yesterday">Yesterday</string>
    <string name="history_n_days_ago">%1$d days ago</string>
    <string name="history_date_format">MMM d,yyyy</string>
    <string name="history_time_format">H:mm</string>

    <!-- explore screen -->
    <string name="explore_last_used">Last used</string>

    <!-- more screen -->
    <string name="more_download" translatable="false">@string/label_download</string>
    <string name="more_setting_general">Setting general</string>
    <string name="more_setting_reader">Setting reader</string>
    <string name="more_setting_advanced">Setting advanced</string>
    <string name="more_about" translatable="false">@string/label_about</string>


    <!-- setting general screen -->
    <string name="settings_start_screen">Start screen</string>
    <string name="settings_start_screen_library" translatable="false">@string/label_library</string>
    <string name="settings_start_screen_history" translatable="false">@string/label_history</string>
    <string name="settings_start_screen_explore" translatable="false">@string/label_explore</string>

    <string name="settings_theme">Theme</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>

    <string name="settings_chapter_display_mode">Chapter display mode</string>
    <string name="settings_display_mode_gird">Grid</string>
    <string name="settings_display_mode_linear">Linear</string>

    <string name="settings_chapter_display_order">Chapter display order</string>
    <string name="settings_display_order_ascend">Ascend</string>
    <string name="settings_display_order_descend">Descend</string>

    <string name="settings_enable_confirm_exit">Confirm exit</string>
    <string name="settings_enable_random_button">Enable random button</string>

    <!-- setting reader screen -->
    <string name="settings_reader_mode">Default reader mode</string>
    <string name="settings_reader_mode_left_to_right">Left to right</string>
    <string name="settings_reader_mode_right_to_Left">Right to left</string>
    <string name="settings_reader_mode_continuous">Continuous</string>

    <string name="settings_reader_orientation">Default reader orientation</string>
    <string name="settings_reader_orientation_portrait">Portrait</string>
    <string name="settings_reader_orientation_landscape">Landscape</string>

    <string name="settings_scale_type">Scale type</string>
    <string name="settings_scale_type_fit_screen">Fit screen</string>
    <string name="settings_scale_type_fit_width">Fit width</string>
    <string name="settings_scale_type_fit_height">Fit height</string>
    <string name="settings_scale_type_original_size">Original size</string>

    <string name="settings_is_page_interval_enabled">Page interval</string>
    <string name="settings_show_info_bar">Show info bar</string>
    <string name="settings_keep_screen_on">Keep screen on</string>
    <string name="settings_use_volume_key">Use volume keys to turn pages</string>
    <string name="settings_invert_volume_key">Invert volume keys</string>
    <string name="settings_is_long_tap_dialog_enabled">Long tap dialog</string>

    <string name="settings_is_area_interpolation_enabled">Area interpolation</string>
    <string name="settings_is_area_interpolation_enabled_summary">Resampling using pixel area relation for moire’-free results</string>

    <string name="settings_filter_mode_default">Default</string>
    <string name="settings_filter_mode_multiply">Multiply</string>
    <string name="settings_filter_mode_screen">Screen</string>
    <string name="settings_filter_mode_overlay">Overlay</string>
    <string name="settings_filter_mode_lighten">Lighten</string>
    <string name="settings_filter_mode_darken">Darken</string>


    <!-- setting advanced screen -->
    <string name="settings_clear_image_cache">Clear image cache</string>
    <string name="settings_clear_image_cache_summary">Clear cover and chapter image cache</string>

    <string name="settings_secure_mode">Secure mode</string>
    <string name="settings_secure_mode_summary">Hide app contents when switch apps and block screenshots</string>


    <!-- about screen -->
    <string name="about_version">Version</string>
    <string name="about_github">GitHub</string>
    <string name="about_enable_auto_updates">Enable auto updates</string>
    <string name="about_check_for_updates">Check for updates</string>
    <string name="about_whats_new">What\'s new</string>
    <string name="about_open_source_licenses" translatable="false">@string/label_open_source_license</string>

    <string name="toast_version_copied">Copy version to clipboard.</string>


    <!-- gallery screen -->
    <string name="gallery_no_content_hint">No content</string>

    <string name="search_hint">Search…</string>
    <string name="search_library_hint">Search library…</string>
    <string name="search_global_hint">Search global…</string>


    <!-- action -->
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_retry">Retry</string>
    <string name="action_back">Back</string>

    <string name="action_install">Install</string>

    <string name="action_clear">Clear</string>
    <string name="action_clear_history">Clear history</string>

    <string name="action_search">Search</string>
    <string name="action_global_search">Global search</string>
    <string name="action_random_pick">Random pick</string>
    <string name="action_login">Login</string>
    <string name="action_upload">Upload</string>

    <string name="action_resume_all">Resume all</string>
    <string name="action_cancel_all">Cancel all</string>

    <string name="action_comments">Comments</string>
    <string name="action_advance_options">Advance options</string>
    <string name="action_edit_manga">Edit manga</string>
    <string name="action_share_manga">Share manga</string>

    <string name="action_add_to_library">Add to library</string>
    <string name="action_remove_from_library">Remove from library</string>

    <string name="action_switch_display_mode">Switch display mode</string>
    <string name="action_switch_sort_mode">Switch sort mode</string>

    <string name="action_set_as_cover">Set as cover</string>
    <string name="action_share_image">Share image</string>
    <string name="action_save_image">Save image</string>

    <string name="action_edit_cover">Edit cover</string>
    <string name="action_share_cover">Share cover</string>
    <string name="action_save_cover">Save cover</string>

    <string name="action_prev_chapter">Previous chapter</string>
    <string name="action_next_chapter">Next chapter</string>

    <string name="action_reader_mode">Mode</string>
    <string name="action_reader_orientation">Orientation</string>
    <string name="action_reader_color_filter">Color filter</string>
    <string name="action_reader_setting">Setting</string>

    <!-- dialog -->
    <string name="dialog_clear_history">Clear all history?</string>
    <string name="dialog_cancel_all_download_tasks">Cancel all download tasks?</string>

    <string name="dialog_new_version_available">New version available!</string>
    <string name="dialog_new_version_available_download">Download</string>
    <string name="dialog_new_version_available_ignore">Ignore</string>
    <string name="update_check_no_new_updates">No new updates available</string>
    <string name="update_check_look_for_updates">Searching for updates…</string>

    <string name="notification_app_update_in_progress">Downloading…</string>
    <string name="notification_app_update_complete">Download complete</string>
    <string name="notification_app_update_error">Download error</string>


    <!-- toast -->
    <string name="confirm_exit">Press back again to exit</string>

    <string name="unknown_error">Unknown error.</string>

    <string name="cache_cleared">Cache cleared.</string>

    <string name="cover_updated">Cover has been updated.</string>
    <string name="cover_update_failed">Cover update failed.</string>

    <string name="metadata_updated">Manga metadata has been updated.</string>
    <string name="title_copied">Copy title to clipboard.</string>
    <string name="author_copied">Copy author to clipboard.</string>
    <string name="tag_copied">Copy tag to clipboard.</string>

    <string name="no_prev_chapter">Already at the beginning.</string>
    <string name="no_next_chapter">Already at the end.</string>

    <string name="image_saved">Image saved.</string>
</resources>
