<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:defaultValue="RTL"
        app:entries="@array/reading_direction_entries"
        app:entryValues="@array/reading_direction_entry_values"
        app:iconSpaceReserved="false"
        app:key="reading_direction"
        app:summary="%s"
        app:title="@string/settings_reading_direction" />

    <ListPreference
        app:defaultValue="DEFAULT"
        app:entries="@array/screen_orientation_entries"
        app:entryValues="@array/screen_orientation_entry_values"
        app:iconSpaceReserved="false"
        app:key="screen_orientation"
        app:summary="%s"
        app:title="@string/settings_screen_orientation" />

    <SwitchPreference
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="is_page_interval_enabled"
        app:title="@string/settings_is_page_interval_enabled" />

    <SwitchPreference
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="show_info_bar"
        app:title="@string/settings_show_info_bar" />

    <SwitchPreference
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="keep_screen_on"
        app:title="@string/settings_keep_screen_on" />

    <SwitchPreference
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="use_volume_key"
        app:title="@string/settings_use_volume_key" />

    <SwitchPreference
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="is_long_tap_dialog_enabled"
        app:title="@string/settings_is_long_tap_dialog_enabled" />

    <SwitchPreference
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="is_area_interpolation_enabled"
        app:summary="@string/settings_is_area_interpolation_enabled_summary"
        app:title="@string/settings_is_area_interpolation_enabled" />
</PreferenceScreen>