<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/library"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/label_library" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/label_history" />
        <item
            android:id="@+id/explore"
            android:icon="@drawable/ic_baseline_explore_24"
            android:title="@string/label_explore" />
        <item
            android:id="@+id/more"
            android:icon="@drawable/ic_baseline_more_horiz_24"
            android:title="@string/label_more" />
    </group>
</menu>
