<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:padding="16dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/page_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/settings_is_page_interval_enabled"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/show_info_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_show_info_bar"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@id/page_interval" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/keep_screen_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_keep_screen_on"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@id/show_info_bar" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/use_volume_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_use_volume_key"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@id/keep_screen_on" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/invert_volume_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_invert_volume_key"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@id/use_volume_key" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/long_tap_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_is_long_tap_dialog_enabled"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@id/invert_volume_key" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/area_interpolation_enabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_is_area_interpolation_enabled"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@id/long_tap_dialog" />
</androidx.constraintlayout.widget.ConstraintLayout>