<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more"
    app:startDestination="@+id/nav_more">

    <fragment
        android:id="@+id/nav_more"
        android:name="com.fishhawk.driftinglibraryandroid.ui.main.more.MoreFragment"
        android:label="@string/label_more">
        <action
            android:id="@+id/action_more_to_server"
            app:destination="@id/nav_server" />
        <action
            android:id="@+id/action_more_to_download"
            app:destination="@id/nav_download" />
        <action
            android:id="@+id/action_more_to_subscription"
            app:destination="@id/nav_subscription" />

        <action
            android:id="@+id/action_more_to_setting_general"
            app:destination="@id/nav_setting_general" />
        <action
            android:id="@+id/action_more_to_setting_reader"
            app:destination="@id/nav_setting_reader" />
        <action
            android:id="@+id/action_more_to_setting_advanced"
            app:destination="@id/nav_setting_advanced" />

        <action
            android:id="@+id/action_more_to_about"
            app:destination="@id/nav_about" />
    </fragment>

    <fragment
        android:id="@+id/nav_server"
        android:name="com.fishhawk.driftinglibraryandroid.ui.main.server.ServerFragment"
        android:label="@string/label_server"
        tools:layout="@layout/server_fragment" />

    <fragment
        android:id="@+id/nav_download"
        android:name="com.fishhawk.driftinglibraryandroid.ui.main.download.DownloadFragment"
        android:label="@string/label_download"
        tools:layout="@layout/download_fragment" />

    <fragment
        android:id="@+id/nav_subscription"
        android:name="com.fishhawk.driftinglibraryandroid.ui.main.subscription.SubscriptionFragment"
        android:label="@string/label_subscription"
        tools:layout="@layout/subscription_fragment" />

    <fragment
        android:id="@+id/nav_setting_general"
        android:name="com.fishhawk.driftinglibraryandroid.ui.main.more.SettingGeneralFragment"
        android:label="@string/label_settings_general" />

    <fragment
        android:id="@+id/nav_setting_reader"
        android:name="com.fishhawk.driftinglibraryandroid.ui.main.more.SettingReaderFragment"
        android:label="@string/label_settings_reader" />

    <fragment
        android:id="@+id/nav_setting_advanced"
        android:name="com.fishhawk.driftinglibraryandroid.ui.main.more.SettingAdvancedFragment"
        android:label="@string/label_settings_advanced" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.fishhawk.driftinglibraryandroid.ui.main.more.AboutFragment"
        android:label="@string/label_about" />
</navigation>